# MyProjects

./: README.md
Brayton_cycle_solver/: brayton_solver.py
Movie-Recommender-System/: .gitignore  Movie_Recommender_System.ipynb  Procfile  app.py  generate_pickles.py
PairsTradingStrat/: README.md
Pressure_vessel_solver/: vessel_solver.py
Production-scheduling-optimizer/: README.md  interview_questions.md  main.py
Stock-Price-Prediction/: check_ranges.py  main.py
beam_bowl_project/: CMakeLists.txt  README.md
beam_bowl_project/config/: configs.csv
beam_bowl_project/docs/: RESULTS.md  THEORY.md
beam_bowl_project/include/: BeamConfig.hpp  FEMSolver.hpp  LumpedSolver.hpp  Vec2.hpp
beam_bowl_project/results/: results.csv
beam_bowl_project/results/shapes/: C01_fem.csv  C01_lumped.csv  C02_fem.csv  C02_lumped.csv  C03_fem.csv  C03_lumped.csv  C04_fem.csv  C04_lumped.csv  C06_fem.csv  C06_lumped.csv  C07_fem.csv  C07_lumped.csv  C08_fem.csv  C08_lumped.csv  C09_fem.csv  C09_lumped.csv  C10_fem.csv  C10_lumped.csv  C11_fem.csv  C11_lumped.csv  C13_fem.csv  C13_lumped.csv  C14_fem.csv  C14_lumped.csv  C15_fem.csv  C15_lumped.csv  C16_fem.csv  C16_lumped.csv  C17_fem.csv  C18_fem.csv  C18_lumped.csv  C19_fem.csv  C19_lumped.csv  C20_fem.csv  C20_lumped.csv  C21_fem.csv  C21_lumped.csv  C22_fem.csv  C22_lumped.csv  C23_lumped.csv  (+4 more)
beam_bowl_project/scripts/: generate_configs.py  plot_results.m  plot_shape.m
beam_bowl_project/src/: FEMSolver.cpp  LumpedSolver.cpp  main.cpp
credit-risk-notebook/: INTERVIEW_PREP.md  README.md  credit_risk_prediction.ipynb  (+1 more)
(+165 files in other folders)
