cmake_minimum_required(VERSION 3.10)
project(BeamInBowl CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS_RELEASE "-O2")

include_directories(${CMAKE_SOURCE_DIR}/include)

add_executable(beam_in_bowl
    src/main.cpp
    src/LumpedSolver.cpp
    src/FEMSolver.cpp
)

target_link_libraries(beam_in_bowl stdc++fs)
